--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,11 +56,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: GTWalsheimPro
+      fonts:
+        - asset: fonts/GTWalsheimProBold.ttf
+        - asset: fonts/SGTWalsheimProRegular.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
