--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,10 +57,18 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: GTWalsheimPro
+    - family: Quicksand
       fonts:
-        - asset: fonts/GTWalsheimProBold.ttf
-        - asset: fonts/SGTWalsheimProRegular.ttf
+        - asset: fonts/Quicksand-Bold.ttf
+          weight: 700
+        - asset: fonts/Quicksand-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Quicksand-Medium.ttf
+          weight: 500
+        - asset: fonts/Quicksand-Regular.ttf
+          weight: 400
+        - asset: fonts/Quicksand-Light.ttf
+          weight: 300
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
