--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  intl: ^0.16.0
 
 dev_dependencies:
   flutter_test:
@@ -41,9 +41,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/imgs/Automobile.png
+    - assets/imgs/Bank.png
+    - assets/imgs/Cash.png
+    - assets/imgs/Charity.png
+    - assets/imgs/Childcare.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -57,17 +60,15 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Quicksand
+    - family: GT-Walsheim-Pro
       fonts:
-        - asset: fonts/Quicksand-Bold.ttf
+        - asset: fonts/GT-Walsheim-Pro-Bold.OTF
           weight: 700
-        - asset: fonts/Quicksand-SemiBold.ttf
-          weight: 600
-        - asset: fonts/Quicksand-Medium.ttf
+        - asset: fonts/GT-Walsheim-Pro-Medium.OTF
           weight: 500
-        - asset: fonts/Quicksand-Regular.ttf
+        - asset: fonts/GT-Walsheim-Pro-Regular.OTF
           weight: 400
-        - asset: fonts/Quicksand-Light.ttf
+        - asset: fonts/GT-Walsheim-Pro-Light.OTF
           weight: 300
   #         style: italic
   #   - family: Trajan Pro
